# TrustLink

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  Makefile  README.md  TODO.md
.github/workflows/: deploy-dapp.yml  release-please.yml
benches/: performance.rs
bindings/python/: .gitignore  README.md  pyproject.toml
bindings/python/trustlink/: __init__.py  async_client.py  client.py  types.py
bindings/typescript/: README.md
docs/: bindings-generation.md  dependency-security.md  integration-guide.md  monitoring.md  performance.md  reentrancy-audit.md  security-review.md  storage-layout.md  storage-migration-issue-266-attestation-origin.md  video-tutorial-guide.md  video-tutorial-script.md
docs/adr/: ADR-005-attestation-origin-enum.md  ADR-005-prevent-admin-fee-collection.md  README.md
examples/anchor-integration/: README.md  flow.mjs
examples/governance/: Cargo.toml  README.md
examples/issuer-cli/: .env.example  .gitignore  README.md  issuer-cli.mjs  package.json
examples/python-verification/: .gitignore  (+4 more)
indexer/: package.json
src/: admin.rs  attestation.rs  constants.rs  errors.rs  events.rs  lib.rs  query.rs  storage.rs  test.rs  types.rs  validation.rs
test_snapshots/: snapshot_after_initialization.1.json  snapshot_after_issuer_registration.1.json  test_admin_cannot_create_attestation_when_not_issuer.1.json  test_unauth_cannot_create_attestation.1.json  test_unauth_cannot_import_attestation.1.json  test_unauth_cannot_register_issuer.1.json  test_unauth_cannot_remove_issuer.1.json
tests/: id_collision_proptest.rs  snapshot_test.rs
(+119 files in other folders)
