[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trustlink-contract"
version = "0.1.0"
description = "Python bindings for the TrustLink on-chain attestation contract"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "TrustLink Contributors"}]
keywords = ["stellar", "soroban", "attestation", "trustlink"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "stellar-sdk>=21.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "mypy>=1.0",
    "types-requests",
]

[project.urls]
Homepage = "https://github.com/Haroldwonder/TrustLink"
Repository = "https://github.com/Haroldwonder/TrustLink"
Documentation = "https://github.com/Haroldwonder/TrustLink/tree/main/bindings/python"
